; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_identity.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.matrix4 = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"gs_matrix_identity\00", align 1
@thread_graphics = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_matrix_identity() #0 {
  %1 = alloca %struct.matrix4*, align 8
  %2 = call i32 @gs_valid(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %13

5:                                                ; preds = %0
  %6 = load i32, i32* @thread_graphics, align 4
  %7 = call %struct.matrix4* @top_matrix(i32 %6)
  store %struct.matrix4* %7, %struct.matrix4** %1, align 8
  %8 = load %struct.matrix4*, %struct.matrix4** %1, align 8
  %9 = icmp ne %struct.matrix4* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %5
  %11 = load %struct.matrix4*, %struct.matrix4** %1, align 8
  %12 = call i32 @matrix4_identity(%struct.matrix4* %11)
  br label %13

13:                                               ; preds = %4, %10, %5
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local %struct.matrix4* @top_matrix(i32) #1

declare dso_local i32 @matrix4_identity(%struct.matrix4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
